2007-09-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.mdp: Set path to configure.in in Makefile integration.

2007-09-14  Martin Dederer <martindederer@gmx.de>

	* Compiler/GNUCompiler.cs: Added method to expand backticked portions
	in compiler-/ linker-arguments

2007-09-07  Marcos David Marín Amador <MarcosMarin@gmail.com>

	* CBinding.Autotools: Set svn:ignore property on
	  CBinding.Autotools.pidb

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CTextEditorExtension.cs: Track api changes.
	* CBinding.mdp: Use gtk# 2.8.

2007-09-07   <> 

	* Makefile.am: Check ENABLE_C to find out if assembly should be compiled or
	  not.

2007-09-05  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs: Update ClassPad when the
	  project starts without having to save a file.

2007-09-04  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CodeGenerationPanel.cs, Compiler/GNUCompiler.cs: Change newlines into
	  spaces from ExtraCompiler/LinkerArgs right before compilation so the
	  newline and spaces are conserved when serializing the project.

2007-09-03  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Gui/CodeGenerationPanel.cs,
	  Gui/CompilerPanel.cs, Parser/TagDatabaseManager.cs: Adapt to new api
	  changes.

2007-09-01  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CompilerPanel.cs, Project/CProject.cs: Allow changing the project's
	  language from C to C++ and vice versa by changing the compiler in the
	  compiler panel.

2007-09-01  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Fixed ccache implementation, though I'm still not
	  sure if ccache should be used in the linking stage (Its currently not
	  used, and I think thats correct).

2007-08-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,